improved version of ui

--- a/NBH/NBH-war/web/addExchangeListing.xhtml
+++ b/NBH/NBH-war/web/addExchangeListing.xhtml
@@ -374,7 +374,7 @@
 
                     </div>
 
-                    <div>
+                    <div class="text-center">
                         <h:commandButton onclick="return validateDT()" 
                                          value="#{exchangeListingManagedBean.currentExchangeListing.id != null ? 'Update Listing' : 'Add Listing'}" 
                                          action="#{exchangeListingManagedBean.submit}" 
