--- a/NBH/NBH-war/web/addOffer.xhtml
+++ b/NBH/NBH-war/web/addOffer.xhtml
@@ -48,7 +48,7 @@
             .formbold-form-label {
                 display: block;
                 font-weight: 500;
-                font-size: 16px;
+                font-size: 20px;
                 color: #07074d;
                 margin-bottom: 12px;
             }
@@ -65,7 +65,7 @@
                 border: 1px solid #e0e0e0;
                 background: white;
                 font-weight: 500;
-                font-size: 16px;
+                font-size: 20px;
                 color: #6b7280;
                 outline: none;
                 resize: none;
@@ -114,7 +114,7 @@
             }
             .formbold-radio-label {
                 font-weight: 500;
-                font-size: 16px;
+                font-size: 20px;
                 padding-left: 12px;
                 color: #070707;
                 padding-right: 20px;
@@ -137,7 +137,7 @@
                 <h:form> 
                     <p:growl id="growl" sticky="true" showDetail="true"/>
 
-                    <h1>Make an Offer</h1> 
+                    <h2 class="text-center">Make an Offer</h2><br/>
 
                     <div class="formbold-mb-5">
                         <h2>
@@ -161,7 +161,7 @@
 
                     </div>
 
-                    <div>
+                    <div class="text-center">
                         <h:commandButton value="Submit" 
                                          action="#{offerManagedBean.submit}" 
                                          styleClass="site-btn"
