--- a/NBH/NBH-war/web/addSkill.xhtml
+++ b/NBH/NBH-war/web/addSkill.xhtml
@@ -19,6 +19,8 @@
                 display: grid;
                 grid-template-columns: repeat(3, 1fr); /* Adjust number of columns as needed */
                 gap: 10px; /* Space between items */
+                padding-left: 20em;
+                padding-right : 20em;
             }
 
             .skill {
@@ -26,15 +28,16 @@
                 padding: 10px;
                 background: #eeeeee;
                 text-align: center;
-                border-radius: 5px;
+                border-radius: 25px;
                 cursor: pointer;
                 text-decoration: none;
                 color: #333;
                 transition: background-color 0.3s;
+                font-size: 20px;
             }
 
             .skill.selected {
-                background-color: #009578;
+                background-color: #999999;
                 color: white;
             }
         </style>
