--- a/NBH/NBH-war/web/timeExchange.xhtml
+++ b/NBH/NBH-war/web/timeExchange.xhtml
@@ -71,7 +71,8 @@
                         <div class="breadcrumb__text">
                             <h2>Service Exchange</h2>
                             <div class="breadcrumb__option">
-                                <span>Find requests made by your fellow neighbours. Lend a helping hand by offering to exchange your skills!</span>
+                                <span>Find requests made by your fellow neighbours.</span><br/>
+                                <span>Lend a helping hand by offering to exchange your skills!</span>
                             </div>
                         </div>
                     </div>
@@ -91,23 +92,20 @@
                                         <div class="blog__item" style="border: 2px solid gainsboro; padding:2em">
                                             <div class="blog__item__text text-center">
                                                 <h5><a href="#">#{listing.title}</a></h5>
-                                                <p> 
-                                                    Date: 
-                                                    <h:outputText value="#{listing.startDateTime}" >
-                                                        <f:convertDateTime pattern="EEEE, MMMM d yyyy" timeZone="Asia/Singapore" />
-                                                    </h:outputText>
-                                                </p>
-                                                <p>Time:
-                                                    <h:outputText value="#{listing.startDateTime}" >
-                                                        <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
-                                                    </h:outputText>
-                                                    -
-                                                    <h:outputText value="#{listing.endDateTime}" >
-                                                        <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
-                                                    </h:outputText>
-                                                </p>
+                                                Date: 
+                                                <h:outputText value="#{listing.startDateTime}" >
+                                                    <f:convertDateTime pattern="EEEE, MMMM d yyyy" timeZone="Asia/Singapore" />
+                                                </h:outputText><br/>
+                                                Time:
+                                                <h:outputText value="#{listing.startDateTime}" >
+                                                    <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
+                                                </h:outputText>
+                                                -
+                                                <h:outputText value="#{listing.endDateTime}" >
+                                                    <f:convertDateTime pattern="HH:mm" timeZone="Asia/Singapore" />
+                                                </h:outputText><br/><br/>
 
-                                                <p:commandLink class="blog__btn" style="border-color: #cccccc; background-color: #ffffff; color: #666666" 
+                                                <p:commandLink class="blog__btn" style="border-color: #cccccc; background-color: #7fad39; color: #ffffff" 
                                                                action="#{exchangeListingManagedBean.navigateToViewExchangeListing(listing)}" 
                                                                value="View Details">
                                                     <!-- <p:commandLink update=":form:eventDetail" oncomplete="PF('eventDialog').show()" title="View Detail"> -->                           
