--- a/NBH/NBH-war/web/timeExchange.xhtml
+++ b/NBH/NBH-war/web/timeExchange.xhtml
@@ -133,7 +133,7 @@
         </ui:fragment>
         <!-- Blog Section End -->
 
-        <ui:fragment rendered="#{empty exchangeListingManagedBean.allListings}">
+        <ui:fragment rendered="#{empty exchangeListingManagedBean.activeListings}">
             <div class='text-center' style="padding:2em">
                 <h3>No service exchange requests yet</h3>            
             </div>
